--- a/bank.html
+++ b/bank.html
@@ -74,11 +74,11 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">ПОЛЕЗНОЕ</span></div>
+                <div class="group-title"><span class="badge badge-warning">КОРИСНЕ</span></div>
                 <ul>
                   <li>
-                    <div class="icon ubki ua"></div><a href="https://www.ubki.ua/ru/" target="_blank">ubki.ua</a><span class="opisi">Кредит ИНФО</span>
-                    <div class="icontooinfo a0repa3" title="Тут можно узнать сумы про все ВАШИ кредиты. Один раз в год предоставляется бесплатн, повторный заказ — 50 грн. Украинское бюро кредитных историй - крупнейшее бюро в Украине " alt=""></div>
+                    <div class="icon ubki ua"></div><a href="https://www.ubki.ua/ru/" target="_blank">ubki.ua</a><span class="opisi">Кредит ІНФО</span>
+                    <div class="icontooinfo a0repa3" title="Тут можна дізнатися суми про всі ваші кредити. Раз на рік надається безкоштовне, повторне замовлення — 50 грн. Українське бюро кредитних історій – найбільше бюро в Україні" alt=""></div>
                   </li>
                 </ul>
               </div>
@@ -97,7 +97,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Обмен валют</span></div>
+                <div class="group-title"><span class="badge badge-success">Обмін валют</span></div>
                 <ul>
                   <li>
                     <div class="icon bestchange ru"></div><a href="https://www.bestchange.ru/" target="_blank">bestchange.ru</a>
@@ -111,19 +111,19 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Торговые площадки криптовалюты</span></div>
+                <div class="group-title"><span class="badge badge-success">Торгові майданчики криптовалюти</span></div>
                 <ul>   
                   <li>
                     <div class="icon tradingview_com"></div><a href="https://ru.tradingview.com/" target="_blank">tradingview.com</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Банкинг. Полезный инструмент - графики акций, индексов, фьючерсов, Форекс и биткоин в реальном времени на TradingView" alt="">       </div>
+                    <div class="icontooinfo a0repa3" title="Розділ-банкінг. Корисний інструмент - графіки акцій, індексів, фючерсів, Форекс та біткоін у реальному часі на TradingView" alt="">       </div>
                   </li>
                   <li>
                     <div class="icon binance_com"></div><a href="https://www.binance.com/?ref=36762801" target="_blank">binance.com`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Банкинг. ТОП биржа и трейдинг платформа криптовалют" alt=""></div>
+                    <div class="icontooinfo a0repa3" title="Розділ-банкінг. ТОП біржа та трейдинг платформа криптовалют" alt=""></div>
                   </li>
                   <li>
                     <div class="icon exmo_com"></div><a href="https://exmo.com/?ref=1654818" target="_blank">exmo.com`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Банкинг. ТОП биткоин биржа и трейдинг платформа. Возможность работы с грн. руб. visa, mastercart" alt=""></div>
+                    <div class="icontooinfo a0repa3" title="Розділ-банкінг. ТОП біткоїн біржа та трейдинг платформа. Можливість роботи з грн. руб. visa, mastercart" alt=""></div>
                   </li>
                   <li>
                     <div class="icon bitfinex com"></div><a href="https://www.bitfinex.com/?locale=ru" target="_blank">bitfinex.com</a>
@@ -131,7 +131,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Рейтинг банков Украины</span></div>
+                <div class="group-title"><span class="badge badge-success">Рейтинг банків України</span></div>
                 <ul>
                   <li>
                     <div class="icon minfin com ua"></div><a href="https://minfin.com.ua/ua/banks/rating/" target="_blank">minfin.com.ua</a>
@@ -182,7 +182,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Страхование/Кредит/Финансы</span></div>
+                <div class="group-title"><span class="badge badge-success">Страхування/Кредит/Фінанси</span></div>
                 <ul>
                   <li>
                     <div class="icon alfabank ua"></div><a href="https://alfabank.ua/" target="_blank">alfabank.ua</a>
@@ -201,7 +201,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Интернет КОШЕЛЕК</span></div>
+                <div class="group-title"><span class="badge badge-success">Інтернет гаманець</span></div>
                 <ul>
                   <li>
                     <div class="icon payoneer com"></div><a href="https://www.payoneer.com/raf/?rid=0FA0C022-2289-43EC-8770-3B4409BD83AF" target="_blank">payoneer.com`</a>
