--- a/city.html
+++ b/city.html
@@ -100,7 +100,7 @@
                     <div class="icon gismeteo"></div><a href="https://www.gismeteo.ua/weather-novomyrhorod-12104/gm/" target="_blank">Погода_Gismeteo</a>
                   </li>
                   <li>
-                    <div class="icon vk com"></div><a href="https://vk.com/novomyrhorod_baraholka" target="_blank">БАРАХОЛКА (рынок)</a>
+                    <div class="icon vk com"></div><a href="https://vk.com/novomyrhorod_baraholka" target="_blank">БАРАХОЛКА (ринок)</a>
                     <div class="icontoo a0VPN1" title="Для роботи потрібний VPN" alt=""></div>
                   </li>
                   <li>
@@ -162,7 +162,7 @@
                 <div class="group-title"><span class="badge badge-success">Городок-2</span></div>
                 <ul>
                   <li>
-                    <div class="icon google"></div><a href="https://www.google.com.ua/" target="_blank">здесь будет инфо по городу №2</a>
+                    <div class="icon google"></div><a href="https://www.google.com.ua/" target="_blank">тут буде інфо для міста №2</a>
                   </li>
                 </ul>
               </div>
@@ -172,7 +172,7 @@
                 <div class="group-title"><span class="badge badge-success">Городок-3</span></div>
                 <ul>
                   <li>
-                    <div class="icon google"></div><a href="https://www.google.com.ua/" target="_blank">здесь будет инфо по городу №3</a>
+                    <div class="icon google"></div><a href="https://www.google.com.ua/" target="_blank">тут буде інфо для міста №3</a>
                   </li>
                 </ul>
               </div>
