--- a/market.html
+++ b/market.html
@@ -74,7 +74,7 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Отследить посылку (по почте)</span></div>
+                <div class="group-title"><span class="badge badge-warning">Відстежити відправлення</span></div>
                 <ul>
                   <li>
                     <div class="icon novaposhta ua"></div><a href="https://novaposhta.ua/ru/tracking" target="_blank">novaposhta.ua</a>
@@ -91,7 +91,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Безопасность-база мошенников</span></div>
+                <div class="group-title"><span class="badge badge-warning">Безпека-база шахраїв</span></div>
                 <ul>
                   <li>
                     <div class="icon bazaukraferistov com"></div><a href="http://bazaukraferistov.com/" target="_blank">bazaukraferistov.com</a>
@@ -116,7 +116,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Доска объявлений-ВСЯКОЕ</span></div>
+                <div class="group-title"><span class="badge badge-success">Дошка оголошень-БУДЬ-ЯКЕ</span></div>
                 <ul>
                   <li>
                     <div class="icon olx ua"></div><a href="https://www.olx.ua/" target="_blank">olx.ua</a>
@@ -136,7 +136,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Доска объявлений-ОДЕЖДА/ОБУВЬ</span></div>
+                <div class="group-title"><span class="badge badge-success">Дошка оголошень-ОДЯГ/ВЗУТТЯ</span></div>
                 <ul>
                   <li>
                     <div class="icon shafa ua"></div><a href="https://shafa.ua/" target="_blank">shafa.ua</a>
@@ -147,7 +147,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Доска объявлений-АВТО/МОТО</span></div>
+                <div class="group-title"><span class="badge badge-success">Дошка оголошень-АВТО/МОТО</span></div>
                 <ul>
                   <li>
                     <div class="icon auto ria com"></div><a href="https://auto.ria.com/" target="_blank">auto.ria.com</a>
@@ -157,14 +157,14 @@
                   </li>
                   <li>
                     <div class="icon avto pro"></div><a href="https://avto.pro/" target="_blank">avto.pro</a>
-                    <div class="icontooinfo a0repa7" title="Автозапчасти без посредников. АвтоПро - площадка для продажи и покупки запчастей для иномарок, новые и бу запчасти, выгодные цены на авторазборках." alt=""></div>
+                    <div class="icontooinfo a0repa7" title="Автозапчастини без посередників. АвтоПро - майданчик для продажу та купівлі запчастин для іномарок, нові та бу запчастини, вигідні ціни на авторозбірках." alt=""></div>
                   </li>
                 </ul>
               </div>
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Работа в Украине</span></div>
+                <div class="group-title"><span class="badge badge-success">Робота в Україні</span></div>
                 <ul>
                   <li>
                     <div class="icon work ua"></div><a href="https://www.work.ua/" target="_blank">work.ua</a>
@@ -175,7 +175,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Аукционы</span></div>
+                <div class="group-title"><span class="badge badge-success">Аукціони</span></div>
                 <ul>
                   <li>
                     <div class="icon skylots org"></div><a href="https://skylots.org/" target="_blank">skylots.org</a>
