--- a/others.html
+++ b/others.html
@@ -74,7 +74,7 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Анализатор ИНТЕРНЕТ соединения</span></div>
+                <div class="group-title"><span class="badge badge-success">Аналізатор ІНТЕРНЕТ з'єднання</span></div>
                 <ul>
                   <li>
                     <div class="icon speed1"></div><a href="http://speedtest.dc.ukrtelecom.ua/" target="_blank">speedtest.dc.ukrtelecom.ua</a>
@@ -97,7 +97,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Поисковики</span></div>
+                <div class="group-title"><span class="badge badge-success">Пошуковики</span></div>
                 <ul>
                   <li>
                     <div class="icon google"></div><a href="https://www.google.com.ua/" target="_blank">Google</a>
@@ -115,10 +115,10 @@
                     <div class="icon wolframalpha com"></div><a href="https://www.wolframalpha.com/" target="_blank">Wolframalpha.com</a>
                   </li>
                   <li>
-                    <div class="icon yandex"></div><a href="https://yandex.ua/" target="_blank">Yandex</a><span class="opisi">нужен VPN</span>
+                    <div class="icon yandex"></div><a href="https://yandex.ua/" target="_blank">Yandex</a><span class="opisi">потрібен VPN</span>
                   </li>
                   <li>
-                    <div class="icon e mail ru"></div><a href="https://mail.ru/" target="_blank">Mail.ru</a><span class="opisi">нужен VPN</span>
+                    <div class="icon e mail ru"></div><a href="https://mail.ru/" target="_blank">Mail.ru</a><span class="opisi">потрібен VPN</span>
                   </li>
                   <li>
                     <div class="icon rambler ru"></div><a href="https://www.rambler.ru/" target="_blank">Rambler.ru</a>
@@ -144,13 +144,13 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Переводчики</span></div>
+                <div class="group-title"><span class="badge badge-success">Перекладачі</span></div>
                 <ul>
                   <li>
-                    <div class="icon translate google com ua"></div><a href="https://translate.google.com.ua/" target="_blank">Переводчик Google</a>
+                    <div class="icon translate google com ua"></div><a href="https://translate.google.com.ua/" target="_blank">Перекладач Google</a>
                   </li>
                   <li>
-                    <div class="icon translate ru"></div><a href="https://www.translate.ru/" target="_blank">Переводчик PROMT</a>
+                    <div class="icon translate ru"></div><a href="https://www.translate.ru/" target="_blank">Перекладач PROMT</a>
                   </li>
                 </ul>
               </div>
@@ -165,36 +165,36 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Торрент-программы</span></div>
+                <div class="group-title"><span class="badge badge-warning">Торрент-програми</span></div>
                 <ul>
                   <li>
-                    <div class="icon utorrent com"></div><a href="https://www.utorrent.com/intl/ru/desktop/" target="_blank">Скачать utorrent</a>
+                    <div class="icon utorrent com"></div><a href="https://www.utorrent.com/intl/ru/desktop/" target="_blank">Завантажити utorrent</a>
                   </li>
                   <li>
-                    <div class="icon acestream org"></div><a href="http://www.acestream.org/" target="_blank">Скачать Acestream плеер</a>
+                    <div class="icon acestream org"></div><a href="http://www.acestream.org/" target="_blank">Завантажити Acestream плеєр</a>
                   </li>
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Торрент-трекеры</span></div>
+                <div class="group-title"><span class="badge badge-success">Торрент-трекери</span></div>
                 <ul>
                   <li>
                     <div class="icon rutracker org"></div><a href="https://rutracker.org/" target="_blank">rutracker.org</a>
                   </li>
                   <li>
-                    <div class="icon nnmclub to"></div><a href="http://nnmclub.to/" target="_blank">nnmclub.to</a><span class="opisi">возможно VPN</span>
+                    <div class="icon nnmclub to"></div><a href="http://nnmclub.to/" target="_blank">nnmclub.to</a><span class="opisi">потрібен VPN</span>
                   </li>
                   <li>
                     <div class="icon utorrent com"></div><a href="http://newtorrent.org/" target="_blank">newtorrent.org</a>
                   </li>
                   <li>
-                    <div class="icon filmitorrent"></div><a href="http://filmitorrent.net/" target="_blank">filmitorrent</a><span class="opisi">ТОП фильмы</span>
+                    <div class="icon filmitorrent"></div><a href="http://filmitorrent.net/" target="_blank">filmitorrent</a><span class="opisi">ТОП фільми</span>
                   </li>
                   <li>
-                    <div class="icon pb wtf"></div><a href="https://pb.wtf/" target="_blank">pb.wtf</a><span class="opisi">фильмы</span>
+                    <div class="icon pb wtf"></div><a href="https://pb.wtf/" target="_blank">pb.wtf</a><span class="opisi">фільми</span>
                   </li>
                   <li>
-                    <div class="icon torrent-filmi net"></div><a href="http://torrent-filmi.net/" target="_blank">torrent-filmi.net</a><span class="opisi">фильмы</span>
+                    <div class="icon torrent-filmi net"></div><a href="http://torrent-filmi.net/" target="_blank">torrent-filmi.net</a><span class="opisi">фільми</span>
                   </li>
                   <li>
                     <div class="icon lostfilm tv"></div><a href="https://www.lostfilm.tv/" target="_blank">lostfilm.tv</a>
@@ -205,13 +205,13 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Карты</span></div>
+                <div class="group-title"><span class="badge badge-success">Карти</span></div>
                 <ul>
                   <li>
                     <div class="icon google maps"></div><a href="https://www.google.com.ua/maps/" target="_blank">google_maps</a>
                   </li>
                   <li>
-                    <div class="icon yandex_maps"></div><a href="https://yandex.ua/maps/" target="_blank">yandex_maps</a><span class="opisi">нужен VPN</span>
+                    <div class="icon yandex_maps"></div><a href="https://yandex.ua/maps/" target="_blank">yandex_maps</a><span class="opisi">потрібен VPN</span>
                   </li>
                   <li>
                     <div class="icon maps visicom ua"></div><a href="https://maps.visicom.ua/" target="_blank">maps.visicom.ua</a>
@@ -219,32 +219,32 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Интернет хранилище для ВАС (облако)</span></div>
+                <div class="group-title"><span class="badge badge-success">Інтернет сховище для ВАС (хмара)</span></div>
                 <ul>
                   <li>
-                    <div class="icon mega nz"></div><a href="https://mega.nz/" target="_blank">mega.nz</a><span class="opisi">получите 50 ГБ</span>
+                    <div class="icon mega nz"></div><a href="https://mega.nz/" target="_blank">mega.nz</a><span class="opisi">отримайте 50 ГБ</span>
                   </li>
                   <li>
-                    <div class="icon drive google com"></div><a href="https://drive.google.com/drive/" target="_blank">drive.google.com</a><span class="opisi">получите 15 ГБ</span>
+                    <div class="icon drive google com"></div><a href="https://drive.google.com/drive/" target="_blank">drive.google.com</a><span class="opisi">отримайте 15 ГБ</span>
                   </li>
                   <li>
-                    <div class="icon dropbox com"></div><a href="https://www.dropbox.com/ru/" target="_blank">dropbox.com</a><span class="opisi">получите 2-5 ГБ</span>
+                    <div class="icon dropbox com"></div><a href="https://www.dropbox.com/ru/" target="_blank">dropbox.com</a><span class="opisi">отримайте 2-5 ГБ</span>
                   </li>
                 </ul>
               </div>
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Религия</span></div>
+                <div class="group-title"><span class="badge badge-success">Релігія</span></div>
                 <ul>
                   <li>
-                    <div class="icon bibleonline ru"></div><a href="https://www.bibleonline.ru/" target="_blank">bibleonline.ru</a><span class="opisi">Библия онлайн</span>
+                    <div class="icon bibleonline ru"></div><a href="https://www.bibleonline.ru/" target="_blank">bibleonline.ru</a><span class="opisi">Біблія онлайн</span>
                   </li>
                   <li>
-                    <div class="icon bible-teka com"></div><a href="https://bible-teka.com/synodal/" target="_blank">bible-teka.com</a><span class="opisi">Библия онлайн</span>
+                    <div class="icon bible-teka com"></div><a href="https://bible-teka.com/synodal/" target="_blank">bible-teka.com</a><span class="opisi">Біблія онлайн</span>
                   </li>
                   <li>
-                    <div class="icon bible by"></div><a href="https://bible.by/" target="_blank">bible.by</a><span class="opisi">Библия онлайн</span>
+                    <div class="icon bible by"></div><a href="https://bible.by/" target="_blank">bible.by</a><span class="opisi">Біблія онлайн</span>
                   </li>
                   <li>
                     <div class="icon slovohrista org"></div><a href="http://slovohrista.org/" target="_blank">slovohrista.org</a>
@@ -255,37 +255,37 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Всякое</span></div>
+                <div class="group-title"><span class="badge badge-success">Всяке</span></div>
                 <ul>
                   <li>
-                    <div class="icon wikipedia org"></div><a href="https://ru.wikipedia.org/" target="_blank">wikipedia</a><span class="opisi">Свободная энциклопедия</span>
+                    <div class="icon wikipedia org"></div><a href="https://ru.wikipedia.org/" target="_blank">wikipedia</a><span class="opisi">Вільна енциклопедія</span>
                   </li>
                   <li>
-                    <div class="icon a1000 menu"></div><a href="https://1000.menu/" target="_blank">1000.menu</a><span class="opisi">Вкусные домашние рецепты</span>
+                    <div class="icon a1000 menu"></div><a href="https://1000.menu/" target="_blank">1000.menu</a><span class="opisi">Смачні домашні рецепти</span>
                   </li>
                   <li>
-                    <div class="icon remontcompa ru"></div><a href="https://remontcompa.ru/" target="_blank">remontcompa</a><span class="opisi">Энциклопедия Windows</span>
+                    <div class="icon remontcompa ru"></div><a href="https://remontcompa.ru/" target="_blank">remontcompa</a><span class="opisi">Енциклопедія Windows</span>
                   </li>
                   <li>
-                    <div class="icon passmark com"></div><a href="https://www.passmark.com/" target="_blank">passmark</a><span class="opisi">Сравнение комп.железа</span>
+                    <div class="icon passmark com"></div><a href="https://www.passmark.com/" target="_blank">passmark</a><span class="opisi">Порівняння комплектуючих</span>
                   </li>
                   <li>
-                    <div class="icon roomtodo com"></div><a href="https://roomtodo.com/" target="_blank">roomtodo.com</a><span class="opisi">Дизайну інтер'єру 3D</span>
+                    <div class="icon roomtodo com"></div><a href="https://roomtodo.com/" target="_blank">roomtodo.com</a><span class="opisi">Дизайн інтерєру 3D</span>
                   </li>
                   <li>
-                    <div class="icon prnt sc"></div><a href="https://prnt.sc/" target="_blank">Lightshot</a><span class="opisi">Инструмент для скриншотов</span>
+                    <div class="icon prnt sc"></div><a href="https://prnt.sc/" target="_blank">Lightshot</a><span class="opisi">Інструмент для скріншотів</span>
                   </li>
                   <li>
                     <div class="icon onlinetimer"></div><a href="https://onlinetimer.ru/" target="_blank">onlinetimer</a><span class="opisi">Онлайн Таймер</span>
                   </li>
                   <li>
-                    <div class="icon time in ua"></div><a href="http://time.in.ua/" target="_blank">time.in.ua</a><span class="opisi">Точное время</span>
+                    <div class="icon time in ua"></div><a href="http://time.in.ua/" target="_blank">time.in.ua</a><span class="opisi">Точний час</span>
                   </li>
                   <li>
-                    <div class="icon ntp-servers net"></div><a href="https://www.ntp-servers.net/" target="_blank">ntp-servers</a><span class="opisi">Свободная энциклопедия</span>
+                    <div class="icon ntp-servers net"></div><a href="https://www.ntp-servers.net/" target="_blank">ntp-servers</a><span class="opisi">Вільна енциклопедія</span>
                   </li>
                   <li>
-                    <div class="icon vshkole com"></div><a href="https://vshkole.com/" target="_blank">vshkole.com</a><span class="opisi">ГДЗ/решебники/учебники</span>
+                    <div class="icon vshkole com"></div><a href="https://vshkole.com/" target="_blank">vshkole.com</a><span class="opisi">ГДЗ/грашники/підручники</span>
                   </li>
                 </ul>
               </div>
