--- a/programs.html
+++ b/programs.html
@@ -75,55 +75,55 @@
             <div class="col-sm">
               <div class="group">
                 <div class="group-title prog-title">
-                  <div class="badge badge-danger">Пароль на архивы: zakladki</div><span class="badge badge-warning">Интернет-хранилище файлов</span>
+                  <div class="badge badge-danger">Пароль на архіви: zakladki</div><span class="badge badge-warning">Інтернет-сховище файлів</span>
                 </div>
                 <ul>
                   <li>
-                    <div class="icon costaction com"></div><a href="http://costaction.com/partner/?PHPSESUD=CEADEE4DA51FAECA3ED6C17C6A9191A5" target="_blank">Хранилище файлов`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Программы. Вы будете получать деньги за каждое скачивание Вашего файла. Просто загрузите файлы на Turbobit.net и Hitfile.net, обменивайтесь ими со своим друзьями, и незнакомцами через блоги, социальные сети, форумы или свои сайты!" alt=""></div>
+                    <div class="icon costaction com"></div><a href="http://costaction.com/partner/?PHPSESUD=CEADEE4DA51FAECA3ED6C17C6A9191A5" target="_blank">Сховище файлів`</a>
+                    <div class="icontooinfo a0repa3" title="Розділ-програми. Ви отримуватимете гроші за кожне скачування Вашого файлу. Просто завантажте файли на Turbobit.net та Hitfile.net, обмінюйтеся ними зі своїми друзями та незнайомцями через блоги, соціальні мережі, форуми або свої сайти!" alt=""></div>
                   </li>
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Всякие настройки</span></div>
+                <div class="group-title"><span class="badge badge-warning">Всілякі налаштування</span></div>
                 <ul>
                   <li>
-                    <div class="icon a0youtubeinform" title="Відео інформація" alt=""></div><a href="https://youtu.be/BdZQy6upWFc" target="_blank">Настройка сайта ZAKLADOK</a>
-                    <div class="icontooinfo a0repa3" title="Как быстро настроить ZAKLADKI на компьютере, ноутбуке, смартфоне" alt=""></div>
+                    <div class="icon a0youtubeinform" title="Відео інформація" alt=""></div><a href="https://youtu.be/BdZQy6upWFc" target="_blank">Настройка сайта ЗАКЛАДОК</a>
+                    <div class="icontooinfo a0repa3" title="Як швидко налаштувати ЗАКЛАДКИ на компютері, ноутбуці, смартфоні" alt=""></div>
                   </li>
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Торрент-программы</span></div>
+                <div class="group-title"><span class="badge badge-warning">Торрент-програми</span></div>
                 <ul>
                   <li>
-                    <div class="icon utorrent com"></div><a href="https://www.utorrent.com/intl/ru/desktop/" target="_blank">Скачать utorrent</a>
+                    <div class="icon utorrent com"></div><a href="https://www.utorrent.com/intl/ru/desktop/" target="_blank">Завантажити utorrent</a>
                   </li>
                   <li>
-                    <div class="icon acestream org"></div><a href="http://www.acestream.org/" target="_blank">Скачать Acestream плеер</a>
+                    <div class="icon acestream org"></div><a href="http://www.acestream.org/" target="_blank">Завантажити Acestream плеер</a>
                   </li>
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Загрузить мессенджеры</span></div>
+                <div class="group-title"><span class="badge badge-warning">Завантажити месенджери</span></div>
                 <ul>
                   <li>
-                    <div class="icon telegram"></div><a href="https://tlgrm.ru/apps" target="_blank">Скачать TELEGRAM</a>
+                    <div class="icon telegram"></div><a href="https://tlgrm.ru/apps" target="_blank">Завантажити TELEGRAM</a>
                   </li>
                   <li>
-                    <div class="icon viber"></div><a href="https://www.viber.com/ru/download/" target="_blank">Скачать VIBER</a>
+                    <div class="icon viber"></div><a href="https://www.viber.com/ru/download/" target="_blank">Завантажити VIBER</a>
                   </li>
                   <li>
-                    <div class="icon skype"></div><a href="https://www.skype.com/ru/get-skype/" target="_blank">Скачать SKYPE</a>
+                    <div class="icon skype"></div><a href="https://www.skype.com/ru/get-skype/" target="_blank">Завантажити SKYPE</a>
                   </li>
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Загрузить браузеры</span></div>
+                <div class="group-title"><span class="badge badge-warning">Завантажити браузери</span></div>
                 <ul>
                   <li>
                     <div class="icon CryptoTab"></div><a href="https://cryptotabbrowser.com/17032365" target="_blank">CryptoTab`</a>
-                    <div class="icontooinfo a0repa3" title="Это браузер для работы и паралельного майнинга биткоинов. Вы в интернете, и Вам понемногу капает Bitcoin" alt=""></div>
+                    <div class="icontooinfo a0repa3" title="Це браузер для роботи та паралельного майнінгу біткоїнів. Ви в інтернеті і Вам потроху капає Bitcoin" alt=""></div>
                   </li>
                   <li>
                     <div class="icon prog_GoogleChrome"></div><a href="https://www.google.com/intl/ru_ALL/chrome/" target="_blank">Google Chrome</a>
@@ -137,7 +137,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Для браузеров веб-плеер</span></div>
+                <div class="group-title"><span class="badge badge-warning">Для браузерів веб-плеєр</span></div>
                 <ul>
                   <li>
                     <div class="icon prog_AdobeFlashPlayer"></div><a href="https://get.adobe.com/ru/flashplayer/" target="_blank">Adobe Flash Player</a>
@@ -147,7 +147,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Архиваторы</span></div>
+                <div class="group-title"><span class="badge badge-warning">Архіватори</span></div>
                 <ul>
                   <li>
                     <div class="icon prog_7zip"></div><a href="https://drive.google.com/open?id=1TSaGxlXBG_bRzipPaexwFPfi4eo-U8i3" target="_blank">7z1900-x86</a>
@@ -157,113 +157,113 @@
                   </li>
                   <li>
                     <div class="icon prog_winrar"></div><a href="https://drive.google.com/open?id=1vDBqhWCzqkNTlfd8IKr1i9QX7fATYTuU" target="_blank">WinRAR 5.70</a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                    <div class="icontooinfo a0zippass" title="заархівовано/пароль: zakladki"></div>
                   </li>
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Проигрыватель</span></div>
+                <div class="group-title"><span class="badge badge-warning">Програвач</span></div>
                 <ul>
                   <li>
                     <div class="icon prog_Aimp"></div><a href="https://drive.google.com/open?id=1OqFi7OJjL5FZKjSC_FC3gRbOqsE3sNV-" target="_blank">Aimp (+radio+skin)</a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                    <div class="icontooinfo a0zippass" title="заархівовано/пароль: zakladki"></div>
                   </li>
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Скриншотер</span></div>
+                <div class="group-title"><span class="badge badge-warning">Скріншотер</span></div>
                 <ul>
                   <li>
                     <div class="icon prog_FastStone"></div><a href="https://drive.google.com/open?id=1isVYJIBqRhk3ON5CIlUVBb1SO1wyepv7" target="_blank">FastStone.Capture_portable</a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                    <div class="icontooinfo a0zippass" title="заархівовано/пароль: zakladki"></div>
                   </li>
                 </ul>
               </div>
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Удаленное управление компютером</span></div>
+                <div class="group-title"><span class="badge badge-warning">Віддалене керування компютером</span></div>
                 <ul>
                   <li>
                     <div class="icon ammyy_admin"></div><a href="https://drive.google.com/open?id=1BEIar3Ge5aw_uDY5isKTNZ5l_4BWD2Nj" target="_blank">Ammyy_admin3.8</a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                    <div class="icontooinfo a0zippass" title="заархівовано/пароль: zakladki"></div>
                   </li>
                   <li>
                     <div class="icon ammyy_admin"></div><a href="https://drive.google.com/open?id=1Yp0_ko_FNcsMm6gMd0vffeMIchArFWD6" target="_blank">Ammyy_admin3.7</a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                    <div class="icontooinfo a0zippass" title="заархівовано/пароль: zakladki"></div>
                   </li>
                   <li>
                     <div class="icon TeamViewer"></div><a href="https://drive.google.com/open?id=1ZTJCd2kIU_HOxJe_wQ8nMOxVbytjNnVJ" target="_blank">TeamViewer.14.Portable</a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                    <div class="icontooinfo a0zippass" title="заархівовано/пароль: zakladki"></div>
                   </li>
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Очистка компютера (+автозапуск)</span></div>
+                <div class="group-title"><span class="badge badge-warning">Очищення комп'ютера (автозапуск)</span></div>
                 <ul>
                   <li>
                     <div class="icon prog_ccleaner"></div><a href="https://drive.google.com/open?id=1SRFx7hNjMrxysVsD2PSFeXjI7XEn7GLe" target="_blank">CCleaner_5.55.7108</a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                    <div class="icontooinfo a0zippass" title="заархівовано/пароль: zakladki"></div>
                   </li>
                   <li>
                     <div class="icon prog_regorganizer"></div><a href="https://drive.google.com/open?id=1JL9K_7YX73tGfGFaUMP-1cxG-RmDubHg" target="_blank">RegOrganizer_8.26</a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                    <div class="icontooinfo a0zippass" title="заархівовано/пароль: zakladki"></div>
                   </li>
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Анализ, тест и мониторинг компьютера</span></div>
+                <div class="group-title"><span class="badge badge-warning">Аналіз, тест та моніторинг комп'ютера</span></div>
                 <ul>
                   <li>
                     <div class="icon prog_AIDA64"></div><a href="https://drive.google.com/open?id=11pfy__qDlI79InKldhfoDBCLFo0kHDN-" target="_blank">AIDA64</a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                    <div class="icontooinfo a0zippass" title="заархівовано/пароль: zakladki"></div>
                   </li>
                   <li>
                     <div class="icon prog_hwmonitor"></div><a href="https://drive.google.com/open?id=1tyknLqKcjkOZvMix-MWBfxDJOkrIkMfU" target="_blank">HWMonitor</a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                    <div class="icontooinfo a0zippass" title="заархівовано/пароль: zakladki"></div>
                   </li>
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Антивирусники</span></div>
+                <div class="group-title"><span class="badge badge-warning">Антивірусні програми</span></div>
                 <ul>
                   <li>
                     <div class="icon prog tnod32 info"></div><a href="https://drive.google.com/open?id=18kmNLxOR2ywf7gBrjvNXZDj9kyHJ_Pgr" target="_blank">NOD32_8.0.319.1_RePack</a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
-                    <div class="icontooinfo a0repa3" title="Антивирус для СЛАБЫХ ПК с оперативкой меньше 1Гб и одноядерным процом ESET NOD32 Antivirus _ Smart Security 8.0.319.1 RePack by KpoJIuK (21.12.2018)+++" alt=""></div>
+                    <div class="icontooinfo a0zippass" title="заархівовано/пароль: zakladki"></div>
+                    <div class="icontooinfo a0repa3" title="Антивірус для СЛАБИХ ПК з оперативкою менше 1Гб і одноядерним процом ESET NOD32 Antivirus _ Smart Security 8.0.319.1 RePack by KpoJIuK (21.12.2018)" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon prog_Avast"></div><a href="https://drive.google.com/open?id=16b8dyNNdl1K6sqlm-LrEQyljQQqGA2JK" target="_blank">Avast (онлайн установщик)</a>
-                    <div class="icontooinfo a0repa3" title="Антивирус" alt=""></div>
+                    <div class="icon prog_Avast"></div><a href="https://drive.google.com/open?id=16b8dyNNdl1K6sqlm-LrEQyljQQqGA2JK" target="_blank">Avast (онлайн інсталятор)</a>
+                    <div class="icontooinfo a0repa3" title="Антивірус" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon prog_Avira"></div><a href="https://drive.google.com/open?id=19tidcXcvgfebelkOiYyzpuYgLdeBnBVD" target="_blank">Avira (онлайн установщик)</a>
-                    <div class="icontooinfo a0repa3" title="Антивирус" alt=""></div>
+                    <div class="icon prog_Avira"></div><a href="https://drive.google.com/open?id=19tidcXcvgfebelkOiYyzpuYgLdeBnBVD" target="_blank">Avira (онлайн інсталятор)</a>
+                    <div class="icontooinfo a0repa3" title="Антивірус" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon prog_360TS"></div><a href="https://drive.google.com/open?id=1YPrQwzphC1AM4TQT5shTsT8sXjYlLImC" target="_blank">360TS (онлайн установщик)</a>
-                    <div class="icontooinfo a0repa3" title="Антивирус" alt=""></div>
+                    <div class="icon prog_360TS"></div><a href="https://drive.google.com/open?id=1YPrQwzphC1AM4TQT5shTsT8sXjYlLImC" target="_blank">360TS (онлайн інсталятор)</a>
+                    <div class="icontooinfo a0repa3" title="Антивірус" alt=""></div>
                   </li>
                   <li>
                     <div class="icon prog_DrWeb"></div><a href="https://drive.google.com/open?id=1HGiSm0B7IovrJi8s7RN_36MpL36U81W0" target="_blank">Dr.Web_CureIt</a>
-                    <div class="icontooinfo a0repa3" title="Одноразовая/портативная утилита для проверки ПК" alt=""></div>
+                    <div class="icontooinfo a0repa3" title="Одноразова/портативна утиліта для перевірки ПК" alt=""></div>
                   </li>
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Для N.O.D.32 продление лицензии</span></div>
+                <div class="group-title"><span class="badge badge-warning">Для N.O.D.32 продовження ліцензії</span></div>
                 <ul>
                   <li>
-                    <div class="icon prog tnod32"></div><a href="https://drive.google.com/open?id=1_n2xbV1wT7c0g-oxDLwTx3wS_RlnXB-2" target="_blank">TNod_СТАРЫЕ_версии</a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                    <div class="icon prog tnod32"></div><a href="https://drive.google.com/open?id=1_n2xbV1wT7c0g-oxDLwTx3wS_RlnXB-2" target="_blank">TNod_СТАРІ_версії</a>
+                    <div class="icontooinfo a0zippass" title="заархівовано/пароль: zakladki"></div>
                   </li>
                   <li>
                     <div class="icon prog tnod32"></div><a href="https://drive.google.com/open?id=1AodVQ5PclVVuKgKfW7tSNTsfV--jpvOR" target="_blank">TNod_1.6.7.0</a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                    <div class="icontooinfo a0zippass" title="заархівовано/пароль: zakladki"></div>
                   </li>
                   <li>
-                    <div class="icon prog tnod32 info"></div><a href="https://drive.google.com/open?id=1Kr8mzGBbQ5w62JhPid9t2jSprhH1BZ6W" target="_blank">Инструкции для N.O.D.32 ESET</a>
-                    <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div>
+                    <div class="icon prog tnod32 info"></div><a href="https://drive.google.com/open?id=1Kr8mzGBbQ5w62JhPid9t2jSprhH1BZ6W" target="_blank">Інструкції для N.O.D.32 ESET</a>
+                    <div class="icontooinfo a0zippass" title="заархівовано/пароль: zakladki"></div>
                   </li>
                 </ul>
               </div>
